<resources>
    <string name="pb_appid">574c490d4a9efa740a8b4567</string>
    <string name="pb_senderid">364656976939</string>
    <string name="pb_logLevel">DEBUG</string>
    <string name="tag">Demand DriverLog</string>
    <string name="error_title"> Server Error </string>
    <string name="no_connection_error_msg"> Could not complete your request due to network connectivity problem. Please try again later.</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="app_name">DDDriver</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Login</string>
    <string name="are_you_sp"><u>Are you service provider?</u></string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="verify_otp">Verify</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_address">E: gowdhaman@czsm.co.in</string>
    <string name="scheme">Scheme</string>
    <string name="subscription">Subscription</string>
    <string name="user_login_success">User logged in successfully</string>
    <string name="provider_login_success">Service provider logged in successfully</string>
    <string name="otp_sendsms_success">Message was sent successfully</string>
    <string name="user_signup_success">User is registered successfully</string>
    <string name="provider_signup_success">Service provider is registered successfully</string>
    <string name="provider_list_bookings_success">Service provider bookings successfully viewed</string>
    <string name="provider_list_bookings_fail">No service provider bookings exist</string>
    <string name="user_list_history_success">User history successfully viewed</string>
    <string name="user_list_history_fail">No user history exist</string>
    <string name="service_get_services_success">Services successfully viewed</string>
    <string name="provider_get_wallet_success">Wallet data displayed successfully</string>
    <string name="user_get_mail_success">User email retrieved successfully</string>
    <string name="user_ongoing_appo_success">User bookings successfully viewed</string>
    <string name="user_ongoing_appo_fail">No user bookings exist</string>
    <string name="service_offered_success">Services labels successfully viewed</string>
    <string name="service_get_providers_success">Available service providers for this service successfully viewed</string>
    <string name="service_get_providers_fail">No service providers available for this service</string>
    <string name="appointment_complete_success">Appointment completed successfully</string>
    <string name="appointment_confirm_success">Appointment confirmed successfully</string>
    <string name="appointment_reject_success">Appointment rejected successfully, and booked for next service provider</string>
    <string name="appointment_book_success">Appointment booked successfully</string>
    <string name="appointment_cancel_success">Appointment cancelled successfully</string>
    <string name="appointment_pending_success">Pending appointments successfully viewed</string>
    <string name="apppointment_review_success">Appointment reviewed successfully</string>
    <string name="appointment_reject_fail">No available service provider</string>
    <string name="appointment_pending_fail">No pending appointments exist</string>
    <string name="otp_content">We have sent you an access code via SMS for mobile phone verification.</string>
    <string name="service_offered">Service Offered</string>
    <string name="signup">Sign Up</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="bookings">Bookings</string>
    <string name="wallet">Wallet</string>
    <string name="services">Services</string>
    <string name="support">Support</string>
    <string name="history">My History</string>
    <string name="no_bookings">No Bookings Exist</string>
    <string name="no_history">No History Exist</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_account">Not having an account yet? <u>CLICK HERE</u></string>
    <string name="provider_sign_up">Sign up as Service Provider</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="phone">Phone</string>
    <string name="send_otp">send OTP</string>
    <string name="verification">VERIFICATION</string>
    <string name="enter_otp">enter OTP here</string>
    <string name="resend">Didn\'t receive OTP yet? RESEND</string>
    <string name="address">Address</string>
    <string name="ongoing_app">Ongoing \nAppointments</string>
    <string name="call_text">For any support, Call us at</string>
    <string name="mail_text">Email us at</string>
    <string name="website_text">Website</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up_provider">SERVICE PROVIDER SIGN UP</string>
    <string name="app_id">Appointment ID</string>
    <string name="app_date_time">Appointment Date and Time</string>
    <string name="review">Review</string>
    <string name="app_details">Appointment Details</string>
    <string name="book_stts">Booking Status</string>
    <string name="appointment">Appointment</string>
    <string name="title_activity_service_details_map">Map</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="tariff_plan">Tariff Plan</string>
    <string name="pricing">Pricing</string>
    <string name="assurance">Our Assurance</string>
    <string name="terms_conditions">Terms and Conditions Apply</string>
    <string name="tariff_assurance_mechanic">Background checked, trained and skilled technicians \n\nInterior and Exterior cleaning \n\nGeneral car repair</string>
    <string name="tariff_pricing_mechanic">RS. 250 onwards</string>
    <string name="tariff_assurance_elec_mas_pl_carp">Background checked, trained and skilled technicians \n\n30 days service guaranteed</string>
    <string name="tariff_pricing_elec_mas_pl_carp">First hour RS. 149 \n\nSubsequent hours RS.89 \n\nMaterial cost excluded \n\nTime spent on procurement of material to be included in work hours \n\nRs.89 inspection charges if job not undertaken.</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="set">Set</string>
    <string name="book">Book</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="complete">Complete</string>
    <string name="confirmed_status">Confirmed</string>
    <string name="calldriver">Call\nDriver</string>
    <string name="supporthome">Support</string>
    <string name="currentbooking">Current\nBooking</string>
    <string name="historyhm">My\nHistory</string>
    <string name="otpscreen_string">We have sent you an access code\n via SMS for mobile phone\n verification</string>
    <string name="req">Demand Driver Request</string>
    <string name="reqtxt">Amount Rs.</string>
    <string name="reqtxtmore">this location</string>
    <string-array name="driver_type_array">
        <item>Hourly</item>
        <item>Outstation</item>
        <item>Valet Parking</item>
    </string-array>
</resources>