<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/login_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:background="@color/darkGray"
            android:padding="@dimen/medium_margin">

            <TextView
                android:id="@+id/login_login_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOG IN"
                android:layout_marginTop="@dimen/medium_margin"
                android:textColor="@color/textColorPrimary" />

            <EditText
                android:id="@+id/login_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_login_textview"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/lightGray"
                android:hint="@string/number"
                android:inputType="phone"
                android:padding="@dimen/medium_margin" />

            <EditText
                android:id="@+id/login_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_number_edittext"
                android:layout_marginTop="5dp"
                android:background="@color/lightGray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/medium_margin" />

            <CheckBox
                android:id="@+id/login_isprovider_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password_edittext"
                android:text="Is Service Provider?" />


            <Button
                android:id="@+id/login_signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_isprovider_checkbox"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@color/redButton"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_forgot_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_signin_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/forgot_password"
                android:textColor="@color/redButton" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_new_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/login_provider_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_relativelayout"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/redButton"
            android:text="@string/provider_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
