<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0066ff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@drawable/btn_register"
        >

        <TextView
            android:id="@+id/verify_otp_verification_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/otp_content"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimary" />

        <EditText
            android:id="@+id/verify_otp_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_otp_verification_textview"
            android:background="@drawable/edt_otp"
            android:hint="@string/enter_otp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLength="4"
            android:padding="@dimen/medium_margin" />

        <Button
            android:id="@+id/verify_otp_verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_otp_edittext"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#ffca00"
            android:text="@string/verify_otp"
            android:textColor="#000" />

        <TextView
            android:id="@+id/verify_otp_resend_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_otp_verify_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:textSize="16sp"
            android:text="@string/resend"
            android:textColor="#fff" />
    </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circledd"/>

    </FrameLayout>

</RelativeLayout>
