<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0066ff"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/provider_signup_button"
        android:layout_margin="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_register"
                >

                <EditText
                    android:id="@+id/provider_signup_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_otp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/edit_text_padding" />

                <EditText
                    android:id="@+id/provider_signup_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_signup_name_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_otp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edit_text_padding" />

                <EditText
                    android:id="@+id/provider_signup_phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_signup_email_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_otp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:enabled="false"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="@dimen/edit_text_padding" />

                <EditText
                    android:id="@+id/provider_signup_address_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_signup_phone_edittext"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edt_otp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/edit_text_padding" />

                <EditText
                    android:id="@+id/provider_signup_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_signup_address_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_otp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding" />

                <EditText
                    android:id="@+id/provider_signup_confirm_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_signup_password_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edt_otp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding" />

                <Spinner
                    android:id="@+id/provider_signup_service_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_signup_confirm_password_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edit_text" />

                <CheckBox
                    android:theme="@style/checkBoxStyle"
                    android:id="@+id/provider_signup_terms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/provider_signup_service_spinner"
                    android:text="Accept terms and conditions"
                    android:textColor="@color/textColorPrimary" />

            </RelativeLayout>


            <ImageView
                android:id="@+id/provider_signup_add_picture_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/signup_circle"/>

        </FrameLayout>

    </ScrollView>

    <Button
        android:id="@+id/provider_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:background="#ffca00"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#000" />

</RelativeLayout>